[gd_scene load_steps=4 format=3 uid="uid://dh6o5h3dcv6d5"]

[ext_resource type="Script" path="res://scripts/cutscene.gd" id="1_m1pff"]
[ext_resource type="LabelSettings" uid="uid://21ceqv5ycliv" path="res://themes/big_label_settings.tres" id="2_kid6a"]
[ext_resource type="LabelSettings" uid="uid://cc4luhxpmp6qc" path="res://themes/my_label_settings.tres" id="3_cmrhe"]

[node name="cutscene" type="CanvasLayer"]
visible = false
script = ExtResource("1_m1pff")

[node name="blackout_rect" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -1.0
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0, 0, 0, 0)

[node name="full_dark_timer" type="Timer" parent="."]

[node name="blackout_labels" type="VBoxContainer" parent="."]
visible = false
offset_left = 371.0
offset_top = 215.0
offset_right = 782.0
offset_bottom = 325.0

[node name="t1" type="Label" parent="blackout_labels"]
visible = false
layout_mode = 2
text = "You Lose..."
label_settings = ExtResource("2_kid6a")
horizontal_alignment = 1

[node name="t2" type="Label" parent="blackout_labels"]
visible = false
layout_mode = 2
text = "but a new generation awaits"
label_settings = ExtResource("3_cmrhe")
horizontal_alignment = 1
